--- a/src/components/bottom-nav/bottom-nav.component.html
+++ b/src/components/bottom-nav/bottom-nav.component.html
@@ -22,7 +22,11 @@
               <button (click)="toggleGroupOffCanvas(item.name)" 
                       class="w-full flex items-center h-12 px-4 space-x-4 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
                 <div class="flex items-center space-x-4 flex-1 min-w-0">
-                  <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                  @if (item.imageUrl) {
+                    <img [src]="item.imageUrl" [alt]="item.name" class="h-6 w-6 flex-shrink-0 object-contain">
+                  } @else if (item.icon) {
+                    <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                  }
                   <span class="font-medium truncate">{{ item.name }}</span>
                 </div>
                 <svg class="h-5 w-5 transition-transform duration-200 flex-shrink-0" [class.rotate-90]="expandedGroups()[item.name]"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" /></svg>
@@ -45,7 +49,11 @@
               <a [routerLink]="item.path" routerLinkActive="bg-blue-600 text-white" 
                  (click)="handleOffCanvasLinkClick()"
                 class="flex items-center h-12 px-4 space-x-4 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
-                <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                @if (item.imageUrl) {
+                  <img [src]="item.imageUrl" [alt]="item.name" class="h-6 w-6 flex-shrink-0 object-contain">
+                } @else if (item.icon) {
+                  <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                }
                 <span class="font-medium truncate">{{ item.name }}</span>
               </a>
             }
@@ -113,17 +121,25 @@
            [class.text-blue-500]="activeGroup()?.name === item.name"
            [class.bg-gray-700]="activeGroup()?.name === item.name"
            [class.text-gray-400]="activeGroup()?.name !== item.name">
-          <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-          </svg>
+          @if (item.imageUrl) {
+            <img [src]="item.imageUrl" [alt]="item.name" class="w-6 h-6 mb-1 object-contain">
+          } @else if (item.icon) {
+            <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
+            </svg>
+          }
           <span class="text-xs text-center">{{ item.name }}</span>
         </button>
       } @else {
         <a [routerLink]="item.path" routerLinkActive="text-blue-500 bg-gray-700" [routerLinkActiveOptions]="{ exact: true }" (click)="handleLinkClick()"
            class="flex-shrink-0 inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400 w-24">
-          <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-          </svg>
+          @if (item.imageUrl) {
+            <img [src]="item.imageUrl" [alt]="item.name" class="w-6 h-6 mb-1 object-contain">
+          } @else if (item.icon) {
+            <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
+            </svg>
+          }
           <span class="text-xs text-center">{{ item.name }}</span>
         </a>
       }
