--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside 
-  class="flex flex-col bg-gray-800 text-gray-300 transition-all duration-300 ease-in-out"
+  class="h-full flex flex-col bg-gray-800 text-gray-300 transition-all duration-300 ease-in-out"
   [class.w-64]="isSidebarOpen()" 
   [class.w-20]="!isSidebarOpen()">
   
